<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Main Content Area -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <!-- Menu Icon -->

        <!-- Central Layout -->

        <View
            android:id="@+id/menuIcon"
            android:layout_width="86dp"
            android:layout_height="89dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="-3dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/puzzl"
            android:backgroundTint="#44303c"
            android:clickable="true"
            android:focusable="true"
            android:rotation="-41"
            android:rotationX="-9"
            android:rotationY="3" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/textNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/bebas"
                android:text="@string/sos_will_be_sent_to_n"
                android:textColor="#45303c"
                android:textAlignment="center"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/start"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_below="@id/textNum"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#f9e7ce"
                android:onClick="startServiceV"
                android:fontFamily="@font/bebas"
                android:textColor="#2e2133"
                android:text="@string/start"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/stop"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_below="@id/start"
                android:backgroundTint="#2e2133"
                android:onClick="stopService"
                android:text="@string/stop"
                android:fontFamily="@font/bebas"
                android:textSize="20sp"
                android:textColor="#f9e7cf"
                app:cornerRadius="20dp" />
        </RelativeLayout>

        <!-- Bottom Right Image -->

        <ImageView
            android:id="@+id/sirenMini"
            android:layout_width="71dp"
            android:layout_height="510dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="340dp"
            android:layout_marginBottom="-217dp"
            android:contentDescription="@string/siren_icon_desc"
            android:src="@drawable/siren_icon" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="356dp"
            android:layout_height="504dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-38dp"
            android:layout_marginBottom="-120dp"
            app:srcCompat="@drawable/free" />
    </RelativeLayout>

    <!-- Sidebar (Navigation Drawer) -->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:background="#f9e7ce"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:background="#f9e7ce">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/woman"
                android:contentDescription="@string/profile_icon"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_user"
                android:textSize="20sp"
                android:fontFamily="@font/playfair"
                android:textColor="#2e2133"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dashboardOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_dashboard"
                android:contentDescription="@string/dashboard_icon"
                android:layout_marginEnd="15dp"
                app:tint="#2e2133" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_ic"
                android:textSize="20sp"
                android:fontFamily="@font/playfair"
                android:textColor="#2e2133" />
        </LinearLayout>


        <!-- Change Emergency Contact Option -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            android:gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_change_number"
                android:contentDescription="@string/change_emergency_contact"
                android:layout_marginEnd="15dp"
                app:tint="#2e2133" />

            <TextView
                android:id="@+id/changeNumberOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_emergency_contact"
                android:textSize="20sp"
                android:textColor="#2e2133"
                android:fontFamily="@font/playfair"
                android:gravity="start" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            android:gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground">

            <!-- Icon -->
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/news"
                android:contentDescription="@string/view_news"
                android:layout_marginEnd="15dp"
                app:tint="#2e2133" />

            <!-- Text -->
            <TextView
                android:id="@+id/safetyTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safety_tips"
                android:textSize="20sp"
                android:textColor="#2e2133"
                android:fontFamily="@font/playfair"
                android:padding="0dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground" />
        </LinearLayout>


        <!-- Siren Option -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            android:gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/siren"
                android:contentDescription="@string/siren"
                android:layout_marginEnd="15dp"
                app:tint="#2e2133" />

            <TextView
                android:id="@+id/siren"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siren_ic"
                android:textSize="20sp"
                android:textColor="#2e2133"
                android:fontFamily="@font/playfair"
                android:gravity="start" />
        </LinearLayout>




        <!-- Add more options if needed -->
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>
